// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<button
  className="Button__StyledButton-s1auny4n-0 is-active bFaiIv"
>
  My Button
</button>
`;

exports[` 2`] = `
<button
  className="Button__StyledButton-s1auny4n-0 is-disabled bFaiIv"
  disabled={true}
>
  My Button
</button>
`;

exports[` 3`] = `
<a
  className="sc-bdVaJa is-active laxZm"
  href="testLink"
>
  My Button
</a>
`;

exports[` 4`] = `
<a
  className="sc-bdVaJa is-disabled laxZm"
  disabled={true}
  href="testLink"
>
  My Button
</a>
`;

exports[`<Button.Blank> renders button with icon 1`] = `
<button
  className="Button__Blank-s1auny4n-1 gBWxu"
  onClick={[Function]}
>
  <MdClear />
</button>
`;

exports[`<Button> renders text 1`] = `
<Button__StyledButton>
  My Button
</Button__StyledButton>
`;

exports[`<Button> renders text 2`] = `
<Button__StyledButton
  active={true}
>
  My Button
</Button__StyledButton>
`;

exports[`<Button> renders text 3`] = `
<Button__StyledButton
  disabled={true}
>
  My Button
</Button__StyledButton>
`;

exports[`<Button> renders text 4`] = `
<styled.a
  href="testLink"
>
  My Button
</styled.a>
`;
